--- a/.github/workflows/ci-scripts-build.yml
+++ b/.github/workflows/ci-scripts-build.yml
@@ -147,6 +147,14 @@ jobs:
           - os: ubuntu-latest
             cmp: gcc
             configuration: default
+            base: "3.15"
+            python: "3.13"
+            profile: deb13
+            test: yes
+
+          - os: ubuntu-latest
+            cmp: gcc
+            configuration: default
             base: "3.14"
             python: "3.7"
             container: "python:3.7"
